--- a/src/app/login/login.module.css
+++ b/src/app/login/login.module.css
@@ -1,14 +1,30 @@
-/* /home/max/Git/MeetUp/src/app/login/login.module.css */
+body:has(.loginContainer) {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100svh;
+}
+
 .loginContainer {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  min-height: 100vh;
   gap: 1.5rem;
   padding: 2rem;
+  width: 300px;
+
+  background-color: var(--base-1);
+  border-radius: 1rem;
+  border: 2px solid var(--foreground);
 }
 
 .loginContainer h1 {
   margin-bottom: 1rem;
+}
+
+.loginContainer form {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
