--- a/src/components/labeled-input.module.css
+++ b/src/components/labeled-input.module.css
@@ -4,14 +4,14 @@
 }
 
 .input {
-  height: 50px;
   position: relative;
   overflow: visible;
+  width: 250px;
 }
 
 .input input {
   width: 100%;
-  height: 100%;
+  height: 50px;
   border: 1px solid var(--textbox-75);
   border-radius: 9999px;
   padding: 10px 20px;
