--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,6 +6,8 @@
 :root {
   /* Custom values */
 
+  --transparent: transparent;
+
   --neutral-000: oklch(0 0 0);
   --neutral-100: oklch(0.2264 0 0);
   --neutral-150: oklch(0.2972 0 0);
@@ -19,7 +21,7 @@
   --neutral-800: oklch(0.9702 0 0);
   --neutral-900: oklch(1 0 0);
 
-  --background: var(--neutral-750);
+  --background: var(--neutral-800);
   --base: var(--neutral-800);
   --text: var(--neutral-000);
   --text-alt: var(--neutral-900);
@@ -97,7 +99,38 @@
 }
 
 @theme inline {
+  --transparent: var(--transpatent);
+
+  --color-neutral-000: var(--neutral-000);
+  --color-neutral-100: var(--neutral-100);
+  --color-neutral-150: var(--neutral-150);
+  --color-neutral-200: var(--neutral-200);
+  --color-neutral-300: var(--neutral-300);
+  --color-neutral-400: var(--neutral-400);
+  --color-neutral-500: var(--neutral-500);
+  --color-neutral-600: var(--neutral-600);
+  --color-neutral-700: var(--neutral-700);
+  --color-neutral-750: var(--neutral-750);
+  --color-neutral-800: var(--neutral-800);
+  --color-neutral-900: var(--neutral-900);
+
+  --background: var(--neutral-750);
+  --base: var(--neutral-800);
+  --text: var(--neutral-000);
+  --text-alt: var(--neutral-900);
+  --background-disabled: var(--neutral-500);
+  --text-disabled: var(--neutral-700);
   --radius: 0.688rem;
+
+  --color-primary: var(--primary);
+  --color-hover-primary: var(--hover-primary);
+  --color-active-primary: var(--active-primary);
+  --color-disabled-primary: var(--disabled-primary);
+
+  --color-secondary: var(--secondary);
+  --color-hover-secondary: var(--hover-secondary);
+  --color-active-secondary: var(--active-secondary);
+  --disabled-secondary: var(--disabled-secondary);
 
   /* Custom values */
 
@@ -174,6 +207,8 @@
 
 .dark {
   /* Custom values */
+
+  --transparent: transparent;
 
   --neutral-000: oklch(1 0 0);
   --neutral-100: oklch(0.9128 0 0);
