--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,6 +6,9 @@
 :root {
   /* Custom values */
 
+  --font-heading: 'Comfortaa', sans-serif;
+  --font-label: 'Varela Round', sans-serif;
+
   --transparent: transparent;
 
   --neutral-000: oklch(0 0 0);
@@ -25,14 +28,17 @@
   --base: var(--neutral-800);
   --text: var(--neutral-000);
   --text-alt: var(--neutral-900);
+  --text-input: var(--text);
+  --text-muted-input: var(--neutral-600);
+  --muted-input: var(--neutral-600);
   --background-disabled: var(--neutral-500);
   --text-disabled: var(--neutral-700);
   --radius: 0.688rem;
 
   --primary: oklch(0.7493 0.1551 74.95);
-  --hover-primary: oklch(0.6568 0.1358 74.86 / 0.8);
-  --active-primary: oklch(0.5911 0.1135 78.29);
-  --disabled-primary: oklch(0.6568 0.1358 74.86 / 0.5);
+  --hover-primary: oklch(0.7493 0.1551 74.95 / 0.8);
+  --active-primary: oklch(0.6191 0.1218 77.58);
+  --disabled-primary: oklch(0.7493 0.1551 74.95 / 0.5);
 
   --secondary: oklch(0.4937 0.1697 271.26);
   --hover-secondary: oklch(0.4937 0.1697 271.26 / 0.8);
@@ -45,8 +51,6 @@
 
   --foreground: oklch(0.13 0.028 261.692);
 
-  --card: oklch(1 0 0);
-
   --card-foreground: oklch(0.13 0.028 261.692);
 
   --popover: oklch(1 0 0);
@@ -54,6 +58,8 @@
   --popover-foreground: oklch(0.13 0.028 261.692);
 
   --primary-foreground: oklch(0.985 0.002 247.839);
+
+  --popover-hover: var(--neutral-750);
 
   --secondary-foreground: oklch(0.21 0.034 264.665);
 
@@ -100,7 +106,25 @@
   --sidebar-ring: oklch(0.707 0.022 261.325);
 }
 
+@font-face {
+  font-family: 'Comfortaa';
+  font-style: normal;
+  font-weight: 300 700;
+  src: url('/fonts/Comfortaa/Comfortaa-VariableFont_weight.ttf')
+    format('truetype');
+}
+
+@font-face {
+  font-family: 'Varela Round';
+  font-style: normal;
+  font-weight: 400;
+  src: url('/fonts/VarelaRound/VarelaRound-Regular.ttf') format('truetype');
+}
+
 @theme inline {
+  --font-heading: var(--font-heading);
+  --font-label: var(--font-label);
+
   --transparent: var(--transparent);
 
   --color-neutral-000: var(--neutral-000);
@@ -120,6 +144,10 @@
   --color-base: var(--neutral-800);
   --color-text: var(--text);
   --color-text-alt: var(--text-alt);
+  --color-text-input: var(--text-input);
+  --color-text-muted-input: var(--text-muted-input);
+  --color-muted-input: var(--muted-input);
+
   --color-background-disabled: var(--neutral-500);
   --color-text-disabled: var(--neutral-700);
   --radius: 0.688rem;
@@ -132,7 +160,7 @@
   --color-secondary: var(--secondary);
   --color-hover-secondary: var(--hover-secondary);
   --color-active-secondary: var(--active-secondary);
-  --disabled-secondary: var(--disabled-secondary);
+  --color-disabled-secondary: var(--disabled-secondary);
 
   /* Custom values */
 
@@ -152,9 +180,11 @@
 
   --color-card-foreground: var(--card-foreground);
 
-  --color-popover: var(--popover);
+  --color-popover: var(--color-background);
 
   --color-popover-foreground: var(--popover-foreground);
+
+  --color-popover-hover: var(--popover-hover);
 
   --color-primary: var(--primary);
 
@@ -168,7 +198,7 @@
 
   --color-muted-foreground: var(--muted-foreground);
 
-  --color-accent: var(--accent);
+  --color-accent: var(--color-neutral-750);
 
   --color-accent-foreground: var(--accent-foreground);
 
@@ -213,13 +243,13 @@
   --transparent: transparent;
 
   --neutral-000: oklch(1 0 0);
-  --neutral-100: oklch(0.9128 0 0);
-  --neutral-150: oklch(0.9702 0 0);
+  --neutral-100: oklch(0.9702 0 0);
+  --neutral-150: oklch(0.9128 0 0);
   --neutral-200: oklch(0.8266 0 0);
   --neutral-300: oklch(0.738 0 0);
   --neutral-400: oklch(0.6434 0 0);
-  --neutral-600: oklch(0.4495 0 0);
   --neutral-500: oklch(0.5486 0 0);
+  --neutral-600: oklch(0.4495 0 0);
   --neutral-700: oklch(0.3407 0 0);
   --neutral-750: oklch(0.2972 0 0);
   --neutral-800: oklch(0.2264 0 0);
@@ -229,6 +259,9 @@
   --base: var(--neutral-750);
   --text: var(--neutral-000);
   --text-alt: var(--neutral-900);
+  --text-input: var(--text);
+  --text-muted-input: var(--neutral-600);
+  --muted-input: var(--neutral-500);
   --background-disabled: var(--neutral-500);
   --text-disabled: var(--neutral-700);
 
@@ -255,6 +288,8 @@
   --popover-foreground: oklch(0.985 0.002 247.839);
 
   --primary-foreground: oklch(0.21 0.034 264.665);
+
+  --popover-hover: var(--neutral-700);
 
   --secondary-foreground: oklch(0.985 0.002 247.839);
 
