--- a/src/components/custom-toolbar.css
+++ b/src/components/custom-toolbar.css
@@ -1,47 +1,12 @@
-/* custom-toolbar.css */
-
 /* Container der Toolbar */
 .custom-toolbar {
   display: flex;
   flex-direction: column;
   gap: 12px;
   padding: 16px;
-  background-color: #ffffff;
-  border: 1px solid #e0e0e0;
-  /*border-radius: 8px;*/
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
-
-/*.custom-toolbar .view-change .view-switcher {
-  display: flex;
-  gap: 8px;
-  justify-content: center;
-}
-
-.custom-toolbar .view-change .view-switcher button {
-  padding: 8px 16px;
-  background-color: #c1830d;
-  /*border: 1px solid #ccc;*/
-/*  border-radius: 11px;
-  font-size: 12px;
-  cursor: pointer;
-  transition: background-color 0.2s, border-color 0.2s;
-  height: 30px;
-  margin-top: 3.5px;
-  color: #ffffff;
-}
-
-.custom-toolbar .view-change .view-switcher button:hover:not(:disabled) {
-  background-color: #e0e0e0;
-  border-color: #999;
-}
-
-.custom-toolbar .view-change .view-switcher button:disabled {
-  background-color: #d0d0d0;
-  border-color: #aaa;
-  cursor: default;
-}*/
 
 /* Anzeige des aktuellen Datums (Monat und Jahr) */
 .custom-toolbar .current-date {
@@ -49,9 +14,7 @@
   font-size: 12px;
   text-align: center;
   color: #ffffff;
-  /*margin: 4px 0;*/
   background-color: #717171;
-  width: 178px;
   height: 37px;
   border-radius: 11px;
 }
@@ -65,7 +28,6 @@
 
 .custom-toolbar .navigation-controls button {
   padding: 8px 12px;
-  /*background-color: #2196F3;*/
   color: #ffffff;
   border: none;
   border-radius: 11px;
@@ -95,7 +57,6 @@
 
 .custom-toolbar .dropdowns select {
   padding: 8px 12px;
-  /*border: 1px solid #ccc;*/
   border-radius: 11px;
   font-size: 10px;
   background-color: #555555;
@@ -108,9 +69,9 @@
   border-color: #999;
 }
 
-.right-section {
+.right-section,
+.view-switcher {
   background-color: #717171;
-  width: 393px;
   height: 48px;
   border-radius: 11px;
   justify-items: center;
@@ -124,18 +85,11 @@
   margin-bottom: 3.5px;
 }
 
-/*.custom-toolbar .navigation-controls .today button {
-  background-color: #c6c6c6;
-  height: 30px;
-  width: 100px;
-  color: #000000;
-  margin-top: 3.5px;
-}*/
-
-.view-change {
+.view-change,
+.right-section {
   background-color: #717171;
   height: 48px;
-  width: 323px;
+  padding: 0 8px;
   border-radius: 11px;
   justify-items: center;
 }
@@ -144,7 +98,6 @@
   color: #000000;
   background-color: #c6c6c6;
   height: 36px;
-  width: 85px;
   border-radius: 11px;
   font-size: 12px;
   align-self: center;
@@ -152,7 +105,6 @@
 
 .datepicker {
   text-align: center;
-  width: 85px;
   height: 30px;
 }
 
