--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -33,6 +33,7 @@
   --text-alt: var(--neutral-900);
   --text-input: var(--text);
   --text-muted-input: var(--neutral-450);
+  --text-muted: var(--neutral-300);
   --muted-input: var(--neutral-600);
   --background-disabled: var(--neutral-500);
   --text-disabled: var(--neutral-700);
@@ -157,6 +158,7 @@
   --color-text-alt: var(--text-alt);
   --color-text-input: var(--text-input);
   --color-text-muted-input: var(--text-muted-input);
+  --color-text-muted: var(--text-muted);
   --color-muted-input: var(--muted-input);
 
   --color-background-disabled: var(--neutral-500);
@@ -280,6 +282,7 @@
   --text-alt: var(--neutral-900);
   --text-input: var(--text);
   --text-muted-input: var(--neutral-450);
+  --text-muted: var(--neutral-300);
   --muted-input: var(--neutral-500);
   --background-disabled: var(--neutral-500);
   --text-disabled: var(--neutral-700);
