feat(event): display user calendars on event creation and edit pages

--- a/src/components/custom-toolbar.css
+++ b/src/components/custom-toolbar.css
@@ -32,6 +32,11 @@
   align-items: center;
 }
 
+.custom-toolbar .navigation-controls .handleWeek {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
 .custom-toolbar .navigation-controls button {
   padding: 8px 12px;
   color: #ffffff;
